# Makekey3

./: .gitignore  GUI-MakeKey.py  MakeKey.py  MakeKeyClass.py  README.md  README.txt  classmakekey.py  complete.py  mods.py  pyproject.toml
SPICE/kernels/: aareadme.txt
SPICE/kernels/fk/: aareadme_en.txt  vlbistns_itrf93_topo_china_131127.tf  vlbistns_itrf93_topo_europe1_131122.tf  vlbistns_itrf93_topo_europe2_131122.tf  vlbistns_itrf93_topo_japan_131127.tf  vlbistns_itrf93_topo_oceania_131127.tf  vlbistns_itrf93_topo_russia_131122.tf  vlbistns_itrf93_topo_southafrica_131127.tf
SPICE/kernels/lsk/: aareadme_en.txt  naifLAST.tls
SPICE/kernels/pck/: aareadme_en.txt  earth_000101_141214_140923.bpc  earth_LAST.bpc
SPICE/kernels/spk/: aareadme.txt  vlbistns_itrf93_china_131127.bsp  vlbistns_itrf93_europe1_131122.bsp  vlbistns_itrf93_europe2_131122.bsp  vlbistns_itrf93_japan_131127.bsp  vlbistns_itrf93_oceania_131127.bsp  vlbistns_itrf93_russia_131122.bsp  vlbistns_itrf93_southafrica_131127.bsp
SPICE/meta/: meta_gaia.tm  meta_juno.tm  meta_mex.tm  meta_mpo.tm  meta_radioastron.tm  meta_vex.tm
sched_files/Setups/: asteroid.x  bco4x16.x  bepicolombo.x  flybyMASTER.sx  flybyMASTER.x  flybyMASTERv2.x  gaia.x  gaia4x16.x  gaia4x8.x  jun8x16.x  juno.x  mex.sx  mex.sx~  mex.x  mex4x16.sx  mex4x8.x  mex8x16.x  mex8x16FLYBY.x  mix.dual_x  mix.x  ra.x  ra4x16.x  ra4x8.x  vex.s  vex.x  vex4x16.x  vex4x4.x  vex4x8.x  vex8x16.x
sched_files/Setups/stations_setups/: 4.chan  8.chan
sched_files/catalogs/: RA_stations.local  stations.local
sched_files/keyfiles/: default.key
(+33 files in other folders)
