[tool.poetry]
name = "makekey"
version = "0.1.2"
description = "Python tools to creeate key files"
authors = ["gpikko <cimo@jive.nl>, gofrito <gofrito@protonmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
colorama = "^0.4.4"
numpy = "^1.4.2"
subprocess = 

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools>=45", "wheel", "setuptools_scm[toml]>=6.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 140

[tool.setuptools_scm]
